argo/apps/lazylibrarian/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
  namespace: media
  labels:
    app.kubernetes.io/name: lazylibrarian
    app.kubernetes.io/instance: lazylibrarian
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lazylibrarian
      app.kubernetes.io/instance: lazylibrarian
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lazylibrarian
        app.kubernetes.io/instance: lazylibrarian
        app.kubernetes.io/part-of: homepage
      annotations:
        homepage/enabled: "true"
        homepage/namespace: media
        homepage/group: media
        homepage/icon: lazylibrarian.png
        homepage/name: lazylibrarian
        homepage/url: http://10.0.0.28
        homepage/description: book manager
    spec:
      containers:
        - name: lazylibrarian
          image: linuxserver/lazylibrarian:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5299
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: books
              mountPath: /books
            - name: torrents
              mountPath: /data
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lazylibrarian-config
        - name: books
          persistentVolumeClaim:
            claimName: nfs-pvc-books
        - name: torrents
          persistentVolumeClaim:
            claimName: nfs-pvc-torrents
