argo/apps/lazylibrarian/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  namespace: media
  labels:
    app: lazylibrarian
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.26
  selector:
    app: lazylibrarian
  ports:
    - port: 80
      targetPort: 5299
      protocol: TCP
