argo/apps/lazylibrarian/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lazylibrarian-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: media-lazylibrarian-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - slazylibrarian.lan
      secretName: wildcard-lan-tls
  rules:
    - host: lazylibrarian.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lazylibrarian-service
                port:
                  number: 5299
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lazylibrarian-redirect-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
